--- a/src/components/site/templates/standard/section/header/header.less
+++ b/src/components/site/templates/standard/section/header/header.less
@@ -1,5 +1,6 @@
 .site-templates-standard-section-header {
-
-/*less/css stuff can go in here*/
-
+  .editable-input {
+    background-color: inherit !important;
+    border: inherit !important;
+  }
 }
