--- a/src/components/site/templates/standard/standard.html
+++ b/src/components/site/templates/standard/standard.html
@@ -23,6 +23,6 @@
     </div>
 
     <div class="stage" id="stage">
-        <ng-include src="'/templates/site/templates/standard/section/' + section + '/' + section + '.html'" ng-repeat="section in sections track by $index" />
+        <ng-include src="'/templates/site/templates/standard/section/' + section + '/public.html'" ng-repeat="section in sections track by $index" />
     </div>
 </div>
