--- a/src/components/site/templates/standard/section/codeSample/codeSample.less
+++ b/src/components/site/templates/standard/section/codeSample/codeSample.less
@@ -1,5 +1,5 @@
 .site-templates-standard-section-codeSample {
-
-/*less/css stuff can go in here*/
-
+  textarea.editable-input {
+    min-height: 300px !important;
+  }
 }
