--- a/src/components/site/templates/standard/section/header/header.less
+++ b/src/components/site/templates/standard/section/header/header.less
@@ -1,6 +1,33 @@
+.editable-input {
+  background-color: inherit !important;
+  border: inherit !important;
+  width: 100% !important;
+}
+
+.editable-wrap {
+  width: 100% !important;
+}
+
+.editable-controls {
+  width: 100% !important;
+}
+
+textarea.editable-input {
+  min-height: 250px !important;
+}
+
 .site-templates-standard-section-header {
-  .editable-input {
-    background-color: inherit !important;
-    border: inherit !important;
+  .delete-button {
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+  }
+
+  li.menu-item:hover .delete-button{
+    display: inline-block !important;
+  }
+
+  div.text-uppercase ul.navbar-right:hover li.add-menu-item {
+    display: block !important;
   }
 }
