--- a/src/components/site/templates/standard/section/codeSample/configure.html
+++ b/src/components/site/templates/standard/section/codeSample/configure.html
@@ -2,31 +2,15 @@
     <div class="container">
         <div class="row app-align-center">
             <div class="col-sm-5 col-sm-push-7">
-        <pre class="app-code">
-<span>1</span> <span class="hidden-xs">goAnalytics</span> “who are the latest 3 users?”
-<span>2</span>
-<span>3</span>  {
-<span>4</span>    "Dave": {
-<span>5</span>      "fullName": "Dave Gamache",
-<span>6</span>      "twitterHandle": "@dhg",
-<span>7</span>    }
-<span>8</span>    "Mark": {
-<span>9</span>      "fullName": "Mark Otto",
-<span>10</span>      "twitterHandle": "@mdo",
-<span>11</span>    }
-<span>12</span>    "Jacob": {
-<span>13</span>      "fullName": "Jacob Thornton",
-<span>14</span>      "twitterHandle": "@fat",
-<span>15</span>    }
-<span>16</span>  }</pre>
+            <pre class="app-code" buttons="no" blur="submit" editable-textarea="section.settings.code" ng-bind-html="codeSample( section.settings.code )"></pre>
             </div>
 
             <div class="col-sm-6 col-sm-pull-5">
-                <h6 class="text-muted text-uppercase">Easy development</h6>
-                <h3 class="m-t-0">Natural language queries make mining data easy for anyone.</h3>
-                <p class="lead m-b-md text-muted">Rather than force everyone at your company to learn incredibly difficult terminal commands, we allow anyone to query the data with natural language to return data.</p>
-                <button class="btn btn-default btn-lg btn-borderless">
-                    Read our docs
+                <h6 class="text-muted text-uppercase" buttons="no" blur="submit" editable-text="section.settings.tag">{{section.settings.tag}}</h6>
+                <h3 class="m-t-0" buttons="no" blur="submit" editable-text="section.settings.heading">{{section.settings.heading}}</h3>
+                <p class="lead m-b-md text-muted" buttons="no" blur="submit" editable-textarea="section.settings.description">{{section.settings.description}}</p>
+                <button class="btn btn-default btn-lg btn-borderless" buttons="no" blur="submit" editable-text="section.settings.button_text">
+                    {{section.settings.button_text}}
                 </button>
             </div>
         </div>
