all sorts of craziness going on, but it is good!

--- a/src/components/builder/builder.less
+++ b/src/components/builder/builder.less
@@ -5265,7 +5265,7 @@
     top: 0 !important;
     right: 0 !important;
     background: #fff !important;
-    width: 80px !important;
+    width: inherit !important;
     height: 30px !important;
     z-index: 10000 !important;
     line-height:30px !important;
