--- a/src/components/builder/builder.html
+++ b/src/components/builder/builder.html
@@ -71,12 +71,13 @@
         <section style="min-height: 995px;">
             <!-- START Page content-->
             <div class="content-wrapper site-templates-standard">
-                <div ng-if="content.sections && content.sections.length > 0" data-drop="true" data-jqyoui-options="{accept: 'a'}" ng-model="content.sections" jqyoui-droppable="{multiple:true}" style="min-height: 150px;width:100%;" class="stage">
-                    <div ng-repeat="section in content.sections track by $index" data-drag="true" class="template-section" data-jqyoui-options="{insertInline: true, revert: 'invalid', handle: '.my-handle'}" jqyoui-draggable="{index: {{$index}},animate:true}">
+                <div ng-if="content.sections && content.sections.length > 0" ui-sortable data-drop="true" ng-model="content.sections" jqyoui-droppable="{multiple:true, stack:false}" style="min-height: 150px;width:100%;" class="stage">
+                    <div ng-repeat="section in content.sections track by $index" class="template-section">
                         <div class="section-settings">
                             <span class="fa fa-trash pull-right" style="cursor:pointer;" ng-click="remove( section )"></span>
                             <span class="fa fa-gear pull-right" style="cursor:pointer;" ng-click="sectionSettings( section, section.options )"></span>
-                            <span class="fa fa-arrows pull-right my-handle" style="cursor:pointer;"></span>
+                            <span class="fa fa-arrow-down pull-right" ng-if="$index + 1 < $parent.content.sections.length" style="cursor:pointer;"></span>
+                            <span class="fa fa-arrow-up pull-right" ng-if="$index > 0" style="cursor:pointer;"></span>
                         </div>
                         <ng-include src="'/templates/site/templates/standard/section/' + section.type + '/configure.html'" />
                     </div>
