--- a/src/components/site/templates/standard/section/quote/configure.html
+++ b/src/components/site/templates/standard/section/quote/configure.html
@@ -1,4 +1,4 @@
-<div ng-controller="SiteTemplatesStandardSectionQuoteController" class="block block-secondary app-high-praise p-b-0">
+<div ng-controller="SiteTemplatesStandardSectionQuoteController" class="block block-secondary app-high-praise p-b-0" style="background-color: {{section.settings.section_background_color}};">
     <div class="container">
         <div class="row app-align-center">
             <div class="col-sm-5 col-sm-push-7">
