--- a/src/components/builder/builder.html
+++ b/src/components/builder/builder.html
@@ -56,7 +56,7 @@
                 <!-- END user info-->
                 <ul class="nav">
                     <li ng-repeat="section in currentSectionOptions track by $index" style="cursor:move !important;">
-                        <a title="{{section.type}}" data-drag="true" ng-model="section" data-jqyoui-options="{revert: 'invalid', appendTo: '.builder', helper: 'clone'}" jqyoui-draggable="{index: {{$index}},animate:true, placeholder: 'keep'}" class="no-submenu" style="cursor:move !important;">
+                        <a title="{{section.type}}" data-drag="true" ng-model="section" data-jqyoui-options="{revert: 'invalid', appendTo: '.builder', helper: 'clone'}" jqyoui-draggable="{index: {{$index}},animate:true, placeholder: 'keep'}" class="no-submenu" style="cursor:move !important;" ng-click="addSection( section )">
                             <em class="fa fa-cube"></em>
                             <span class="item-text">{{section.type}}</span>
                         </a>
