--- a/src/components/builder/section-settings.html
+++ b/src/components/builder/section-settings.html
@@ -8,7 +8,7 @@
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Button Background Color</label>
-                <spectrum-colorpicker ng-model="thing.settings.section_background_color"></spectrum-colorpicker>
+                <spectrum-colorpicker ng-model="thing.settings.section_background_color" options="{showInput: true, showAlpha: true}"></spectrum-colorpicker>
             </div>
             <button type="button" ng-click="ok()" class="btn btn-default">Save</button>
         </form>
