--- a/src/components/site/templates/standard/section/features/configure.html
+++ b/src/components/site/templates/standard/section/features/configure.html
@@ -1,4 +1,4 @@
-<div ng-controller="SiteTemplatesStandardSectionFeaturesController" class="block block-secondary app-block-marketing-grid">
+<div ng-controller="SiteTemplatesStandardSectionFeaturesController" class="block block-secondary app-block-marketing-grid" style="background-color: {{section.settings.section_background_color}};">
     <div class="container text-center">
 
         <div class="row m-b-lg">
