--- a/src/components/site/templates/standard/section/leftImage/configure.html
+++ b/src/components/site/templates/standard/section/leftImage/configure.html
@@ -1,4 +1,4 @@
-<div ng-controller="SiteTemplatesStandardSectionLeftImageController" class="block block-secondary app-iphone-block">
+<div ng-controller="SiteTemplatesStandardSectionLeftImageController" class="block block-secondary app-iphone-block" style="background-color: {{section.settings.section_background_color}};">
     <div class="container">
         <div class="row app-align-center">
 
