--- a/src/components/site/templates/standard/section/logoStrip/public.html
+++ b/src/components/site/templates/standard/section/logoStrip/public.html
@@ -1,4 +1,4 @@
-<div ng-controller="SiteTemplatesStandardSectionLogoStripController" class="block app-ribbon p-y-lg">
+<div ng-controller="SiteTemplatesStandardSectionLogoStripController" class="block app-ribbon p-y-lg" style="background-color: {{section.settings.section_background_color}};">
     <div class="container text-center">
         <img src="assets/img/startup-4.svg">
         <img src="assets/img/startup-5.svg">
