--- a/src/components/site/templates/standard/section/pricing/public.html
+++ b/src/components/site/templates/standard/section/pricing/public.html
@@ -1,4 +1,4 @@
-<div ng-controller="SiteTemplatesStandardSectionPricingController" class="block app-price-plans">
+<div ng-controller="SiteTemplatesStandardSectionPricingController" class="block app-price-plans" style="background-color: {{section.settings.section_background_color}};">
     <div class="container text-center">
 
         <div class="row m-b-lg">
