now that graph overlay hides properly

--- a/src/components/site/templates/standard/section/header/configure.html
+++ b/src/components/site/templates/standard/section/header/configure.html
@@ -35,7 +35,7 @@
     </nav>
 
 
-    <img class="app-graph" ng-if="section.settings.show_graph_overlay" src="https://herc.objects.cdn.dream.io/uploads/5fb8b31fe18186f590d1d0e0fa445944/startup-0.svg">
+    <img class="app-graph" ng-if="section.settings.show_graph_overlay && section.settings.show_graph_overlay != '0'" src="https://herc.objects.cdn.dream.io/uploads/5fb8b31fe18186f590d1d0e0fa445944/startup-0.svg">
 
     <div class="block-xs-middle p-b-lg">
         <div class="container">
