--- a/src/components/site/templates/standard/section/leftImage/configure.html
+++ b/src/components/site/templates/standard/section/leftImage/configure.html
@@ -3,7 +3,7 @@
         <div class="row app-align-center">
 
             <div class="col-sm-5 hidden-xs">
-                <img class="app-iphone" src="assets/img/startup-2.jpg" style="width: 100%;">
+                <img herc-upload ng-model="section.settings.image" class="app-iphone" src="{{section.settings.image}}" style="width: 100%;cursor:pointer;">
             </div>
 
             <div class="col-sm-6 col-sm-offset-1">
