--- a/src/components/site/templates/standard/section/quote/configure.html
+++ b/src/components/site/templates/standard/section/quote/configure.html
@@ -7,7 +7,7 @@
                 <p class="m-b-md text-muted">Cindy Smith, founder of Cool Startup</p>
             </div>
             <div class="col-sm-6 col-sm-pull-5">
-                <img src="assets/img/startup-3.jpg">
+                <img herc-upload ng-model="section.settings.image" src="{{section.settings.image}}" style="cursor:pointer;">
             </div>
         </div>
     </div>
