--- a/src/components/site/templates/standard/section/quote/public.html
+++ b/src/components/site/templates/standard/section/quote/public.html
@@ -7,7 +7,7 @@
                 <p class="m-b-md text-muted">Cindy Smith, founder of Cool Startup</p>
             </div>
             <div class="col-sm-6 col-sm-pull-5">
-                <img src="assets/img/startup-3.jpg">
+                <img src="{{section.settings.image}}">
             </div>
         </div>
     </div>
