logo section is completely configurable now

--- a/src/components/site/templates/standard/section/logoStrip/logoStrip.less
+++ b/src/components/site/templates/standard/section/logoStrip/logoStrip.less
@@ -1,5 +1,9 @@
 .site-templates-standard-section-logoStrip {
+  span.logo-item:hover span.delete-logo-button {
+    display: block !important;
+  }
 
-/*less/css stuff can go in here*/
-
+  div.logo-section:hover > span.add-logo-button {
+    display: inline-block !important;
+  }
 }
