--- a/src/components/site/templates/standard/section/quote/public.html
+++ b/src/components/site/templates/standard/section/quote/public.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row app-align-center">
             <div class="col-sm-5 col-sm-push-7">
-                <h6 class="text-muted text-uppercase">High Praise</h6>
-                <h3 class="m-t-0 m-b-md">"Go Analytics is amazing. Decisions that used to take weeks, now only takes minutes and is available to everyone on my team."</h3>
-                <p class="m-b-md text-muted">Cindy Smith, founder of Cool Startup</p>
+                <h6 class="text-muted text-uppercase">{{section.settings.quote_title}}</h6>
+                <h3 class="m-t-0 m-b-md">{{section.settings.quote_description}}</h3>
+                <p class="m-b-md text-muted">{{section.settings.quoter}}</p>
             </div>
             <div class="col-sm-6 col-sm-pull-5">
                 <img src="{{section.settings.image}}">
