--- a/src/components/site/templates/standard/section/logoStrip/configure.html
+++ b/src/components/site/templates/standard/section/logoStrip/configure.html
@@ -1,9 +1,10 @@
-<div ng-controller="SiteTemplatesStandardSectionLogoStripController" class="block app-ribbon p-y-lg" style="background-color: {{section.settings.section_background_color}};">
-    <div class="container text-center">
-        <img src="assets/img/startup-4.svg">
-        <img src="assets/img/startup-5.svg">
-        <img src="assets/img/startup-6.svg">
-        <img src="assets/img/startup-7.svg">
-        <img src="assets/img/startup-8.svg">
+<div ng-controller="SiteTemplatesStandardSectionLogoStripController" class="block app-ribbon p-y-lg site-templates-standard-section-logoStrip" style="background-color: {{section.settings.section_background_color}};">
+    <div class="container text-center logo-section">
+        <span ng-repeat="logo in section.settings.logos track by $index" class="logo-item" style="position:relative;display:inline-block;">
+            <img herc-upload ng-model="logo.url" src="{{logo.url}}" style="cursor:pointer;{{logo.height ? 'height: ' + logo.height + 'px;' : ''}}{{logo['max-width'] ? 'max-width: ' + logo['max-width'] + 'px;' : ''}}{{logo.width ? 'width: ' + logo.width + 'px;' : ''}}{{logo['max-height'] ? 'max-height: ' + logo['max-height'] + 'px;' : ''}}">
+            <span class="fa fa-times fa-2x delete-logo-button" style="position:absolute; display:none; top: -5px; right: -5px; cursor:pointer;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; color: #fff;" ng-click="removeMe( $index, $parent.section.settings.logos )"></span>
+            <span class="fa fa-gear fa-2x delete-logo-button" style="position:absolute; display:none; bottom: 3px; right: -5px; cursor:pointer;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; color: #fff;" ng-click="settings( logo )"></span>
+        </span>
+        <span class="add-logo-button" style="border: 2px dashed #fff;background: rgba( 255, 255, 255, 0.5 );min-width:150px;min-height:50px;cursor:pointer;display:none;color:white;font-size:18px;font-weight:bold;line-height:50px;" ng-click="addLogo( section.settings.logos )">Add logo</span>
     </div>
 </div>
